# eloqdoc

./: .gitignore  .gitmodules  README.md  SConstruct
concourse/artifact/ELOQDSS_ELOQSTORE/: eloqdoc.conf  rclone.ini
concourse/artifact/ELOQDSS_ROCKSDB/: data_substrate.cnf  eloqdoc.conf
concourse/artifact/ELOQDSS_ROCKSDB_CLOUD_S3/: data_substrate_cluster_a.cnf  data_substrate_cluster_b.cnf  data_substrate_cluster_c.cnf  eloqdoc.conf  eloqdoc_cluster_a.conf  eloqdoc_cluster_b.conf  eloqdoc_cluster_c.conf  eloqdss.conf
concourse/pipeline/: build_debug_tarball.yml  build_nightly_tarball.yml  build_release_tarball.yml  main.ent.yml  main.yml  pr.ent.yml
concourse/scripts/: build_tarball.bash  build_tarball_open.bash  common.sh  data_substrate.cnf  git-tag.sh  main.bash  main.ent.bash  pr.ent.bash  store_rocksdb_cloud.yaml  tag.sh
concourse/tasks/: build_nightly_tarball.yml  build_release_tarball.yml  main.ent.yml  main.yml  pr.ent.yml
docs/: how-to-compile.md  how-to-deploy-cluster.md
scons/site_tools/: idl_tool.py  jsheader.py
scripts/: install_dependency_ubuntu2404.sh
scripts/buildscripts/: burn_in_tests.py  bypass_compile_and_fetch_binaries.py  eslint.py  fetch_and_build_openssl.sh  launch_evergreen_ec2_instance.sh  make_vcxproj.py  scons.py  update_test_lifecycle.py
scripts/buildscripts/linter/: git.py  runner.py
scripts/buildscripts/mobile/: README-Android.md
scripts/buildscripts/tests/: test_aws_ec2.py  test_lifecycle_test_failures.py  test_remote_operations.py  test_update_test_lifecycle.py
src/mongo/: SConscript
src/mongo/base/: object_pool.h  string_data.h
src/mongo/db/: SConscript  client.h  coro_sync.cpp  coro_sync.h  db.cpp  dbmain.cpp  keys_collection_cache.cpp  keys_collection_cache.h  kill_sessions_local.cpp  local_thread_state.cpp  local_thread_state.h  logical_session_cache_impl.cpp  logical_session_cache_impl.h  session.cpp  (+7 more)
src/mongo/db/modules/eloq/: CMakeLists.txt  SConscript
src/mongo/db/modules/eloq/cmake/: find_dependencies.cmake
src/mongo/db/modules/eloq/src/: eloq_cursor.cpp  eloq_cursor.h  eloq_global_options.cpp  eloq_global_options.h  eloq_index.cpp  eloq_index.h  eloq_kv_engine.cpp  eloq_kv_engine.h  eloq_options_init.cpp  eloq_record_store.cpp  eloq_record_store.h  eloq_recovery_unit.cpp  eloq_recovery_unit.h
src/mongo/db/modules/eloq/src/base/: eloq_catalog_factory.cpp  eloq_catalog_factory.h  eloq_key.h  eloq_table_schema.cpp  eloq_table_schema.h  eloq_util.cpp  eloq_util.h
tests/pytests/: powertest.py
(+1276 files in other folders)
